--- a/source/pesando3.tex
+++ b/source/pesando3.tex
@@ -3,7 +3,7 @@ Si studia la metrica
 \[ g = \de s^2 = \frac{\epsilon \de x^2 + \de y^2}{y^2} \]
 con \( \epsilon = \pm 1\).
 
-\subsubsection*{Vettore di Killing} \todo
+\subsubsection*{Vettore di Killing} 
 Considerando che la metrica non dipende dal modulo di x, ma solo da quello di y, si scrive immediatamente che per 
 \[ \vec{k} = \left( \begin{array}{c}  cost \\ 0 \end{array}  \right) \]
 \[ \mathcal{L}_{\vec{k}} g = 0 \]
