--- a/source/pesando1.tex
+++ b/source/pesando1.tex
@@ -207,8 +207,26 @@ pertanto le componenti $F'_{+i}$  per \( i\neq1 \) divengono
 	  {(\frac{\gamma^2}{2} 	(\frac{(1-\beta)x_+ - (1+\beta)x_-}{\sqrt{2}})^2 + \vec{x}_\perp^2)^{\frac{D-1}{2}}} \hat{r}_i \]
 dove si tiene conto che per \(v\rightarrow c \Rightarrow \beta \rightarrow -1\) le componenti $F_{-i}$ si annullano.
 Nel limite, 
-\[ F'_{+i} \rightarrow \frac{(1-\beta)}{2}  e\frac{\Gamma(\frac{D-1}{2})}{2\pi^{\frac{D-1}{2}}\epsilon_0}
+\[ F'_{+i} \rightarrow  e\frac{\Gamma(\frac{D-1}{2})}{2\pi^{\frac{D-1}{2}}\epsilon_0}
 	N_D \frac{\delta(x_+)}{x_\perp^{D-2}} \]
+
+In figura \ref{figure:campoxt} il campo disegnato nel piano (x,ct), in figura \ref{figure:campoxy} lo stesso campo, nel piano (x,y), con la particella che lo genera.
+
+
+
+\begin{figure}[htbp]
+ \centering
+ \includegraphics[width=0.3\textwidth]{images/foglio1_xt}
+	\caption*{campo nel piano (x,ct): supporto su x+ct=0, direzione lungo x-ct=0}
+ \label{figure:campoxt}
+\end{figure}
+\begin{figure}[htbp]
+ \centering
+ \includegraphics[width=.3\textwidth]{images/foglio1_xy}
+	\caption*{campo nel piano (x,y): supporto su x+ct=0, nel punto in cui \`e la particella, diretto come la velocit\`a della particella}
+ \label{figure:campoxy}
+\end{figure}
+
 
  
 
