--- a/source/pesando3.tex
+++ b/source/pesando3.tex
@@ -186,19 +186,19 @@ che raccogliendo le costanti e riarrangiando porta a
 Al variare di $\epsilon$ e $\sigma$, si ottengono i seguenti grafici:
 \begin{figure}[htbp]
  \centering
- \includegraphics[width=\textwidth]{images/foglio3_neg_neg}
+ \includegraphics[width=.3\textwidth]{images/foglio3_neg_neg}
 	\caption*{\(\epsilon=-1, \;\sigma=-1\)}
  \label{figure:neg_neg}
 \end{figure}
 \begin{figure}[htbp]
  \centering
- \includegraphics[width=\textwidth]{images/foglio3_pos_neg}
+ \includegraphics[width=.3\textwidth]{images/foglio3_pos_neg}
 	\caption*{\(\epsilon=-1, \;\sigma=+1\)}
  \label{figure:pos_neg}
 \end{figure}
 \begin{figure}[htbp]
  \centering
- \includegraphics[width=\textwidth]{images/foglio3_pos_pos}
+ \includegraphics[width=.3\textwidth]{images/foglio3_pos_pos}
 	\caption*{\(\epsilon=+1, \;\sigma=+1\)}
  \label{figure:pos_pos}
 \end{figure}
