--- a/source/pesando4.tex
+++ b/source/pesando4.tex
@@ -8,6 +8,7 @@ porta, in forma canonica, a
 da cui si identifica facilmente
 \[ \de l^2 = \frac{1}{v^2-1} \dx_0^2 \]
 Si pu\`o quindi definire una nuova coppia di variabili, separando la parte spaziale e quella temporale: \( \de X = \de l \).
+\[ \de s^2 = -\de T^2 + \de X^2 \;\;\; \Rightarrow \;\;\; X = \frac{x_0}{\sqrt{v^2-1}} \;\;\;;\;\;\; T =\sqrt{v^2 -1}\left( t_0 + \frac{v}{v^2 -1} x_0\right) \]
 
 
 
@@ -26,6 +27,7 @@ da cui
 \[ u_\mu = \frac{\dot{\gamma}}{\sqrt{-\|\dot{\gamma}}} = \frac{e_t}{k\bar{x}} \]
 L'accelerazione \`e quindi
 \[ a = \nabla_ u = \frac{1}{k^2\bar{x}^2} \nabla_t e_t =  \frac{1}{k^2\bar{x}^2} \Gamma_{tt}^x e_x = \frac{e_x}{\bar{x}} \]
+Nel caso di osservatori che si muovano con moto accelerato, la metrica non \`e pi\`u stazionaria, quindi gli osservatori non sono sincronizzabili e la metrica non \`e riconducibile alla forma canonica.
 
 
 
